
2013-02-07  WooHyun Jung

        * elm_entry_single_line_set should not change cnp_mode when PLAINTEXT mode.

2013-02-07  Jaehwan Kim

        * Add smart callback signals of a scroller. "vbar,drag", "vbar,press", "vbar,unpress", "hbar,drag", "hbar,press", "hbar,unpress".

2013-02-12  ChunEon Park (Hermet)

        * GLview, Gengrid support "language,changed" smart callback.

2013-02-12  ChunEon Park (Hermet)

        * Ctxpopup will be dismissed when elm language is changed.

2013-02-12  ChunEon Park (Hermet)

        * added APIs - elm_object_item_translatable_part_text_set(), elm_object_item_translatable_part_text_get().

2013-02-12  Arvind R

        * Fix elc_player pause state to be in sync.
        * Fix time string display to handle hours right.

2013-02-12  ChunEon Park (Hermet)

        * replace elm_object_domain_translatable_text_part_set(), elm_object_translatable_text_part_get() with elm_object_domain)translatable_part_text_set(), elm_object_translatable_part_text_get().

2013-02-14  ChunEon Park (Hermet)

        * added 2 APIs elm_object_orientation_mode_disabled_set(), elm_object_orientation_mode_disabled_get()

2013-02-15  Jaehwan Kim

        * Add the reorder effect in toolbar.

2013-02-15  Shinwoo Kim

        * Popup is now a focusable object.

2013-02-15  ChunEon Park (Hermet)

        * support naviframe, button, label orientation mode.

2013-02-16  Paulo C. A. Cavalcanti Jr

        * Fix elm_config to properly check file type.

2013-02-16  ChunEon Park (Hermet)

        * Improve naviframe to not apply items'style multiple times.

2013-02-16  ChunEon Park (Hermet)

        * Don't handle the resize objects in widget infrastructure. Actually resize objects are sub objects so we don't need to care them separately. this causes overhead in some cases.

2013-02-17  Cedric Bail

	* Improve support on some 64bits system.

2013-02-17 Mike Blumenkrantz

        * ignore tab key widget focus change if control/alt is pressed